# research-vlm-hallucination

./: .gitignore  README.md  main.py  pyproject.toml
egh_vlm/: extract_feature.py  extract_features.py  extract_output.py  extract_outputs.py  hallu_ffn_detector.py  hallucination_dataset.py  utils.py
experiment/egh_vlm/: egh_vlm_eval.ipynb  egh_vlm_linear_probing.ipynb  eval_egh_vlm.ipynb  extract_features.ipynb  extract_output.ipynb  extract_outputs.ipynb  generate_answers.ipynb  generate_enhanced_answers.ipynb  generate_raw_answers.ipynb  linear_probing.ipynb
experiment/phd/: phd.ipynb
